--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             </div>
 
             <!-- Footer -->
-            <footer class="bg-white/80 dark:bg-gray-900/80 backdrop-blur-sm border-t border-gray-200 dark:border-gray-800 py-4 shadow-lg" style="position:fixed;left:0;right:0;bottom:0;z-index:9999;">
+            <footer class="bg-white dark:bg-gray-900 border-t border-gray-200 dark:border-gray-800 py-4 shadow-lg" style="position:fixed;left:0;right:0;bottom:0;z-index:9999;">
                 <div class="w-full px-4 flex items-center justify-between">
                     <!-- Left corner: app name and author -->
                     <div class="flex items-center gap-4">
